--- a/content/resources/02_16.md
+++ b/content/resources/02_16.md
@@ -4,6 +4,8 @@ description: Introduction to 16.62X
 file: /courses/16-621-experimental-projects-i-spring-2003/c9cf4acdce715aabe83dd4e1cc8fee97_02_16.pdf
 file_size: 78023
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
