--- a/content/resources/16-621s03.md
+++ b/content/resources/16-621s03.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/16-621-experimental-projects-i-spring-2003/7d39ca1d8574312e876232ef920acfe8_16-621s03.jpg
 file_size: 30320
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "A lab notebook cover.\_(Image\_courtesy of\_MIT OCW.)"
   credit: ''
