--- a/content/resources/hos21004_2.md
+++ b/content/resources/hos21004_2.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/16-621-experimental-projects-i-spring-2003/2299b3d37c58249487ce250a176f572f_HOS21004_2.pdf
 file_size: 88689
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
